--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 </head>
 <body>
     
+    <h1 style="text-align: center;">VSCode</h1>
+    <h3 style="text-align: center;">keyboard-shorcut⌨️</h3>
+    <div style="display: flex; justify-content: center;">
+        <ul>
+            <li>Ctrl + P</li>
+            <li>Ctrl + K + R</li>
+        </ul>
+        <ul>
+            <li>관리</li>
+            <li>명령 팔레트</li>
+            <li>도움말: 바로 가기 키 참조</li>
+        </ul>
+    </div>
+
+
 
    <embed src="shortcut/res/keyboard-shortcuts-windows.pdf" width="100%" height="1000" type="application/pdf"  ></embed>
 
-    <ul>
-        <li>Ctrl + P</li>
-        <li>Ctrl + K + R</li>
-    </ul>
 
 
 
@@ -24,5 +35,8 @@
 <style>
     body{
         margin: 0;
+    }
+    .ul-inline{
+        display: inline-grid;
     }
 </style>
